[build-system]
requires = [
    "setuptools==80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.GenericAffidavit"
version = "1.0"
description = "Generic affidavit"
readme = "README.md"
dependencies = [
    "docassemble.AssemblyLine @ git+https://github.com/SuffolkLITLab/docassemble-AssemblyLine.git@main",
]
license = "MIT"
license-files = [
    "LICENSE",
]

[[project.authors]]
name = "Suffolk LIT lab Volunteer"
email = "246309182+Franconian10@users.noreply.github.com"

[project.urls]
Homepage = "https://courtformsonline.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
